k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ganttlet
  namespace: ganttlet
spec:
  selector:
    app: ganttlet
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
